<resources>
    <string name="app_name">Calendary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_number">1</string>

    <string name="Mon">월</string>
    <string name="Tue">화</string>
    <string name="Wed">수</string>
    <string name="Thur">목</string>
    <string name="Fri">금</string>
    <string name="Sat">토</string>
    <string name="Sun">일</string>

    <string name="Home">달력</string>

    <string name="login">LOGIN</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="pw">PW</string>
    <string name="join">JOIN</string>
    <string name="pwcheck">비밀번호 확인</string>
</resources>
