<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".calendar.CalendarFragment"
    android:background="@color/white"
    android:id="@+id/calendar_framelayout">

    <LinearLayout
        android:id="@+id/calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:gravity="left|top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/prevMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_back" />
            </LinearLayout>

            <TextView
                android:id="@+id/currentMonth"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_weight="0.6"
                android:fontFamily="@font/notosans_regular"
                android:gravity="center"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/nextMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Sun" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Mon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Tue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Wed" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Thur" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Fri" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notossans_bold"
                android:gravity="center"
                android:text="@string/Sat" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7" />

    </LinearLayout>
</FrameLayout>